# capburn

./: .gitignore  Cargo.toml  README.md  fssp-train.sh  install-capburn.sh  install.sh
.github/workflows/: ci.yml  release.yml
crates/capburn-core/: Cargo.toml
crates/capburn-core/src/: charset.rs  image_ops.rs  inference.rs  lib.rs  model.rs
crates/capburn-core/tests/: record_roundtrip.rs
crates/capburn-php/: Cargo.toml  build.rs
crates/capburn-php/.cargo/: config.toml
crates/capburn-php/examples/: basic.php
crates/capburn-php/src/: lib.rs
crates/capburn-php/stubs/: Capburn.stubs.php
crates/capburn-train/: Cargo.toml
crates/capburn-train/src/: data.rs  detect.rs  main.rs  training.rs
crates/capburn-train/tests/: fixed_seq_learns.rs
